# hands-on-transformers-for-nlp-and-cv

./: .gitmodules  README.md  pyproject.toml
chapter-16/: vit.ipynb
torch_fundamentals/: torch_permute.ipynb  torch_unfold.ipynb
